tests/semantic/invalid/missing_model_guardrail.short
model classifier {
  format onnx;
  path "models/classifier.onnx";
  task "image_classification";
  precision int8;
  input_shape "1,3,224,224";
  output_shape "1,1000";
  backend_preference onnxruntime_cpu, fallback;
  compact true;
};
tensor image float "1,3,224,224";
infer classifier(image) -> result;
